--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "elm": "^0.19.1-3",
+    "elm-hot": "^1.1.4",
+    "node-elm-compiler": "^5.0.4",
     "parcel": "^1.12.4"
   }
 }
