--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "node-elm-compiler": "^5.0.4",
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "parcel-plugin-workbox": "^0.2.0",
+    "workbox-cli": "^4.3.1"
+  },
+  "workbox": {
+    "importScripts": []
   }
 }
