--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "node-elm-compiler": "^5.0.4",
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "workbox-sw": "^4.3.1"
   }
 }
